Projeto/Compilador/tests/cases/error/T43.pas
program T43;
function F(length: integer): integer;
begin
  F := length;
end;
begin
  writeln(F(3));
end.
